Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1861

osd-ldiskfs doesn't set object file type

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 3987

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/8b92f800-f77c-11e1-8b95-52540035b04c.

      It seems that when e2fsck is run against an MDT that the file type of the files/directories/objects is not being set in the directory entry. This causes e2fsck to complain about every inode in the filesystem because the ldiskfs_dir_entry_2->file_type is being left unset.

      The sub-test test_8 failed with the following error in the test log:

      Setting filetype for entry 'last_rcvd' in / (2) to 1.
      Setting filetype for entry 'fld' in / (2) to 1.
      Setting filetype for entry 'seq_ctl' in / (2) to 1.
      Setting filetype for entry 'seq_srv' in / (2) to 1.
      Setting filetype for entry 'capa_keys' in / (2) to 1.
      Setting filetype for entry 'ROOT' in / (2) to 2.
      Setting filetype for entry 'lov_objid' in / (2) to 1.
      Setting filetype for entry 'CATALOGS' in / (2) to 1.
      Setting filetype for entry '1' in /O/1/d1 (524327) to 1.
      Setting filetype for entry '2' in /O/1/d2 (524328) to 1.
      Setting filetype for entry '3' in /O/1/d3 (524329) to 1.
      Setting filetype for entry '4' in /O/1/d4 (524330) to 1.
      :
      :
      

            tappro Mikhail Pershin
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: